# CaptchAI

./: .bumpversion.toml  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
captchai/: __init__.py  captcha.py
captchai/core/models/: config.py  grid.py
captchai/core/provider/aws/: providers.py  resolvers.py
captchai/core/provider/base/: base.py
tests/audio_captchas_resources/captcha-01/: audio.flac  solution.json
tests/audio_captchas_resources/captcha-02/: audio.flac  solution.json
tests/audio_captchas_resources/captcha-03/: audio.flac  solution.json
tests/audio_captchas_resources/captcha-04/: audio.flac  solution.json
tests/audio_captchas_resources/captcha-05/: audio.flac  solution.json
tests/audio_captchas_resources/captcha-06/: audio.flac  solution.json
tests/audio_captchas_resources/captcha-07/: audio.flac
tests/audio_captchas_resources/captcha-08/: audio.flac  solution.json
tests/audio_captchas_resources/captcha-09/: audio.flac  solution.json
tests/audio_captchas_resources/captcha-10/: audio.flac  solution.json
tests/audio_captchas_resources/error-captcha/: audio.flac  solution.js
tests/audio_captchas_resources/to-convert-captcha/: audio.mpeg  solution.json
tests/models/: grid.py
tests/providers/: test_aws_provider.py
tests/providers/resolvers/: test_aws_resolvers.py
tests/visual_captchas_resources/captcha-01/: solution.json
tests/visual_captchas_resources/captcha-02/: solution.json
tests/visual_captchas_resources/captcha-03/: solution.json
tests/visual_captchas_resources/captcha-04/: solution.json
tests/visual_captchas_resources/captcha-05/: solution.json
tests/visual_captchas_resources/captcha-06/: solution.json
tests/visual_captchas_resources/captcha-07/: solution.json
tests/visual_captchas_resources/captcha-08/: solution.json
tests/visual_captchas_resources/captcha-09/: solution.json
tests/visual_captchas_resources/captcha-10/: solution.json
tests/visual_captchas_resources/captcha-11/: solution.json
tests/visual_captchas_resources/captcha-12/: solution.json
